RESOLVED FIXED113781
Overflow propagation broken in BTT and RTL writing-modes
https://bugs.webkit.org/show_bug.cgi?id=113781
Summary Overflow propagation broken in BTT and RTL writing-modes
Morten Stenshorne
Reported 2013-04-02 07:47:09 PDT
The following command: ./Tools/Scripts/run-webkit-tests --gtk LayoutTests/fast/multicol/overflow-content.html results in a failure. This doesn't happen when running this test together with others in one go (e.g. all tests in LayoutTests/fast/multicol). Not exactly sure why the test is unstable, but my current fix (not submitted yet) for bug 113058 makes it fail reliably. This bug is related to how overflow is handled in rtl and btt writing modes, and I find it hard to believe that this is a multicol-specific problem.
Attachments
Test case (591 bytes, text/html)
2013-04-02 07:47 PDT, Morten Stenshorne
no flags
Test case with non-visible overflow (no multicol) (592 bytes, text/html)
2013-04-03 00:56 PDT, Morten Stenshorne
no flags
Patch (10.51 KB, patch)
2013-04-03 06:09 PDT, Morten Stenshorne
no flags
Archive of layout-test-results from gce-cr-linux-01 for chromium-linux-x86_64 (544.53 KB, application/zip)
2013-04-03 07:07 PDT, WebKit Review Bot
no flags
Patch (16.13 KB, patch)
2013-04-04 02:19 PDT, Morten Stenshorne
no flags
Archive of layout-test-results from gce-cr-linux-03 for chromium-linux-x86_64 (940.92 KB, application/zip)
2013-04-04 03:12 PDT, WebKit Review Bot
no flags
Patch (14.38 KB, patch)
2014-04-22 17:23 PDT, Morten Stenshorne
no flags
Patch (14.42 KB, patch)
2014-04-22 17:49 PDT, Morten Stenshorne
no flags
Patch (15.03 KB, patch)
2014-04-23 01:09 PDT, Morten Stenshorne
no flags
Morten Stenshorne
Comment 1 2013-04-02 07:47:35 PDT
Created attachment 196138 [details] Test case
Morten Stenshorne
Comment 2 2013-04-03 00:56:51 PDT
Created attachment 196294 [details] Test case with non-visible overflow (no multicol)
Morten Stenshorne
Comment 3 2013-04-03 06:09:51 PDT
WebKit Review Bot
Comment 4 2013-04-03 07:07:28 PDT
Comment on attachment 196337 [details] Patch Attachment 196337 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17413082 New failing tests: fast/multicol/vertical-rl/rules-with-border-before.html
WebKit Review Bot
Comment 5 2013-04-03 07:07:32 PDT
Created attachment 196346 [details] Archive of layout-test-results from gce-cr-linux-01 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-01 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Morten Stenshorne
Comment 6 2013-04-04 02:19:54 PDT
WebKit Review Bot
Comment 7 2013-04-04 03:12:27 PDT
Comment on attachment 196456 [details] Patch Attachment 196456 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17418075 New failing tests: fast/multicol/vertical-rl/rules-with-border-before.html
WebKit Review Bot
Comment 8 2013-04-04 03:12:30 PDT
Created attachment 196462 [details] Archive of layout-test-results from gce-cr-linux-03 for chromium-linux-x86_64 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-03 Port: chromium-linux-x86_64 Platform: Linux-3.3.8-gcg-201212281604-x86_64-with-GCEL-10.04-gcel_10.04
Morten Stenshorne
Comment 9 2013-06-14 06:15:35 PDT
Anyone interested in reviewing this?
Morten Stenshorne
Comment 10 2013-07-26 00:28:53 PDT
Fixed in Blink: http://code.google.com/p/chromium/issues/detail?id=236326 If someone wants it in WebKit, feel free to grab it. :) I'm unassigning myself from this one.
Morten Stenshorne
Comment 11 2014-04-22 17:22:39 PDT
Okay, I'm back. :) This is now blocking bug 131809 (in addition to bug 113058).
Morten Stenshorne
Comment 12 2014-04-22 17:23:27 PDT
Dave Hyatt
Comment 13 2014-04-22 17:35:24 PDT
Comment on attachment 229927 [details] Patch Rename noOverflowRect() to flippedClientBoxRect(). Looks good just do that rename and I'll r+ cq+
Morten Stenshorne
Comment 14 2014-04-22 17:49:39 PDT
Dave Hyatt
Comment 15 2014-04-22 20:37:27 PDT
Comment on attachment 229932 [details] Patch Looks like you need to export the new method for it to build on Mac.
Morten Stenshorne
Comment 16 2014-04-23 01:09:08 PDT
Dave Hyatt
Comment 17 2014-04-23 06:04:40 PDT
Comment on attachment 229961 [details] Patch r=me
WebKit Commit Bot
Comment 18 2014-04-23 06:33:24 PDT
Comment on attachment 229961 [details] Patch Clearing flags on attachment: 229961 Committed r167706: <http://trac.webkit.org/changeset/167706>
WebKit Commit Bot
Comment 19 2014-04-23 06:33:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.